fixes for disclaimer text, BAF form and overflow-x

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -193,3 +193,10 @@ body {
     align-items: center;
   }
 }
+
+// Fix for scrolling sideways on iPad down
+body.location-page {
+  @media (max-width: $screen-sm-min) {
+    overflow-x: hidden;
+  }
+}
